--- a/src/components/Navbar/navbar.styles.scss
+++ b/src/components/Navbar/navbar.styles.scss
@@ -44,4 +44,5 @@
   transition: all 0.3s;
   padding: 8px 12px;
   border-radius: 12px;
+  text-decoration: none;
 }
